# browsectl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
browsectl/: core.py  gateway.py  main.py  models.py  ports.py
browsectl/adapters/: cdp.py
docs/: python-style.md
docs/sites/: _template.md  linkedin.md
tests/: test_cdp.py  test_cdp_newtab_switchtab.py  test_cdp_operations.py  test_core.py
