[project]
name = "browsectl"
version = "0.1.0"
description = "Browser-agnostic automation for AI agents"
authors = [
    {name = "Luis Bordo"},
]
requires-python = ">=3.14"
dependencies = [
    "websockets>=15.0",
    "attrs (>=26.1.0,<27.0.0)",
]

[project.scripts]
browsectl = "browsectl.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16"
pytest = "^8.0"
ruff = "^0.12"
pytest-asyncio = "^1.4.0"

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
warn_unreachable = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_any_decorated = true
enable_error_code = [
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "exhaustive-match",
]
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "websockets",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
